--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
   "homepage": "https://github.com/BravoLT/code-challenge-2018#readme",
   "devDependencies": {
     "jasmine": "^3.1.0"
+  },
+  "dependencies": {
+    "npm": "^6.0.0"
   }
 }
